--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <body>
       <h1> My name is Cynthia</h1>
       <p> And I am a Dog person</p>
+      <p> Shopping List</p>
+      <ul>
+        <li>Bell pepper</li>
+        <li>Chicken curry</li>
+        <li>Chicken braest</li>
+        <li>Basmati rice</li>
+        <li>Mixed vegetables</li>
+        <li>Olive oil</li>
+        <li>All purpose seasoning</li>
+      </ul>
+      <p> Making the Fried rice</p>
+      <ol>
+        <li>Slice and season chicken braest</li>
+        <li>Fry using olive oil and set aside</li>
+        <li>Fry the rice and add your chopped bell pepper</li>
+        <li>Add 1 tea spoon all purpose seasoning</li>
+        <li>Add the desired amount of water</li>
+        <li>Stire and allow to cook</li>
+        <li>Once almost ready add the fried chicken breast and mixeed vegetables</li>
+
+
+      </ol>
     </body>
 </html>
     
