Added some images and style
Added some pictures, made a table, created a success form for new user registration, flex box having a precise layout and added some colour to my website.

--- a/index.html
+++ b/index.html
@@ -3,32 +3,93 @@
     <head>
        <meta charset="utf-8" />
        <title> My first webpage</title>
+       <link rel="stylesheet" href="mystylesheet.css" />
     </head>
     <body>
-      <h1> My name is Cynthia</h1>
-      <p> And I am a Dog person</p>
-      <p> Shopping List</p>
+      <h1> Hello! Welcome To Cynthia's Cuisine</h1>
+      <p> Missing The Taste of Home? Or Would Simply Like To Try new dishes?, Order from us for an Amazing Experience.  
+        We pride ourselve as the best in making Healthy and Delicious Cameroonian or Nigerian dishes.</p>
+      
+      <h4 class="purpletext"> Menu List</h4>
+        <p>    </p>
       <ul>
-        <li>Bell pepper</li>
-        <li>Chicken curry</li>
-        <li>Chicken braest</li>
-        <li>Basmati rice</li>
-        <li>Mixed vegetables</li>
-        <li>Olive oil</li>
-        <li>All purpose seasoning</li>
+        <li>Cameroon/Nigeria Jellof.</li>
+        <li>Grilled Chicken accompanied with Fried Plantain or Chips.</li>
+        <li>Grilled Fish</li>
+        <li>Poulet DG</li>
+        <li>Eru and Gari</li>
+        <li>Ndole and Boiled Plantains </li>
+        <li>Egusi Pudding</li>
+        <li>Katikati and Fufu Corn</li>
+        <li>Egusi Soup and Pounded Yam/Fufu</li>
+        <li>Bitterleaf Soup and Pounded Yam/Fufu</li>
+        <li>Afang Soup and Gari/Fufu</li>
+        <li>Etc...</li>
       </ul>
-      <p> Making the Fried rice</p>
+      <h4> Other Services We Offer</h4>
+      <p>    </p>
       <ol>
-        <li>Slice and season chicken braest</li>
-        <li>Fry using olive oil and set aside</li>
-        <li>Fry the rice and add your chopped bell pepper</li>
-        <li>Add 1 tea spoon all purpose seasoning</li>
-        <li>Add the desired amount of water</li>
-        <li>Stire and allow to cook</li>
-        <li>Once almost ready add the fried chicken breast and mixeed vegetables</li>
-
-
+        <li>Online and Home Cooking Classes</li>
+        <li>Cooking Orders for Ceremonies/Parties </li>
+        <li>Well Trained Customer Service Assistants to Offer an Extra Ordinary Guests Experience</li>
       </ol>
+      <table>
+        <h4>Price Ranges and Discount Rates</h4>
+        <tr>
+          <th>Order Size</th>
+          <th>Price range/Discount</th>
+        </tr>
+        <tr>
+          <td>Small</td>
+          <td>£10-£15 5% Discount For Orders From 5 Plates Above.</td>
+        </tr>
+        <tr>
+          <td>Medium</td>
+          <td>£15-£25 10% Discount For Orders From 5 Pates Above.</td>
+        </tr>
+        <tr>
+            <td>Large</td>
+            <td>£26-£35 12% Discount For Orders From 5 Plates Above. </td>
+          </tr>
+          <tr>
+            <td>Cooking Classes and Other Services</td>
+            <td>Are Negotiable Based On Preferences.</td>
+          </tr>
+      </table> 
+      <img src="./images/Poulet DG.jpeg" height="200px" width="300px" />
+      <img src="./images/Grilled fish.jpeg" height="200px" width="300px"/>
+      <img src="./images/Nigerian Jellof.jpeg" height="200px" width="300px"/>
+      <img src="./images/Egusi Soup and fufu.jpeg" height="200px" width="300px"/>
+      <img src="./images/Ndole.jpeg" height="200px" width="300px"/>
+
+      <h5> New To Website!!! Please Register For Fast Delivery To All Your Orders And Benefit Discounts...</h5>
+
+      <br /><br />
+
+      <form action="./html/formSuccess.html">
+        <label for="fusername">UserName:</label><br />
+        <input
+        type="text"
+        maxlength="10"
+        value=""
+        id="fusername"
+        name="fusername"
+        required
+        /><br><br />
+        <label for="femail">Email:</label><br />
+        <input type="email" value="" id="femail" name="femail" required /><br><br />
+        <label for="fpassword">Password:</label>
+        <input type="password" value="" id="fpassword" required /><br><br />
+        <label for="fconfirmpassword">Confirm Password:</label>
+        <input type="password" value="" id="fconfirmpassword" required /><br><br />
+        <input type="submit" value="Register"/>
+      </form>
+
+      <br><br />
+      <a href="mailto: cynthiataboko@gmail.com"> Email Address </a><br><br/>
+      <a href="tel:07508043758"> Phone Number </a>
+
+
     </body>
 </html>
     
