created a login page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
         <input type="password" value="" id="fconfirmpassword" required /><br><br />
         <input type="submit" value="Register"/>
       </form>
-
+      <p>Or</p>
+      <form action="./html/loginPage.html">
+        <input type="submit" value="Login"/>
+      </form>
+        
       <br><br />
       <a href="mailto: cynthiataboko@gmail.com"> Email Address </a><br><br/>
       <a href="tel:07508043758"> Phone Number </a>
