Created a grid sample
Created a grid sample, added a link to some websites about Cameroon and African dishes, and added multiple pages.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <br /><br />
 
-      <form action="./html/formSuccess.html">
+      <form action="./formSuccess.html">
         <label for="fusername">UserName:</label><br />
         <input
         type="text"
@@ -76,24 +76,24 @@
         name="fusername"
         required
         /><br><br />
-        <label for="femail">Email:</label><br />
+        <label for="femail">Email:</label><br>
         <input type="email" value="" id="femail" name="femail" required /><br><br />
-        <label for="fpassword">Password:</label>
+        <label for="fpassword">Password:</label><br>
         <input type="password" value="" id="fpassword" required /><br><br />
-        <label for="fconfirmpassword">Confirm Password:</label>
+        <label for="fconfirmpassword">Confirm Password:</label><br>
         <input type="password" value="" id="fconfirmpassword" required /><br><br />
         <input type="submit" value="Register"/>
       </form>
       <p>Or</p>
-      <form action="./html/loginPage.html">
+      <form action="./loginPage.html">
         <input type="submit" value="Login"/>
       </form>
         
       <br><br />
       <a href="mailto: cynthiataboko@gmail.com"> Email Address </a><br><br/>
-      <a href="tel:07508043758"> Phone Number </a>
-
-
+      <a href="tel:07508043758"> Phone Number </a><br><br/>
+      <a href="https://en.wikipedia.org/wiki/Cameroonian_cuisine"> About Cameroon Cuisine </a><br><br/>
+      <a href="https://nomadparadise.com/nigerian-food/"> Most Popularly Tried nigerian-food</a>
     </body>
 </html>
     
