--- a/loginPage.html
+++ b/loginPage.html
@@ -6,11 +6,11 @@
     </head>
     <body> 
        <h2>Login</h2>
-       <form action="./html/index.html">
-        <label for="femail">Email:</label><br />
-        <input type="email" value="" id="femail" name="femail" required /><br><br />
-        <label for="fpassword">Password:</label>
-        <input type="password" value="" id="fpassword" required /><br><br />
+       <form action="./index.html">
+        <label for="femail">Email:</label><br >
+        <input type="email" value="" id="femail" name="femail" required /><br><br/>
+        <label for="fpassword">Password:</label><br>
+        <input type="password" value="" id="fpassword" required /><br><br/>
         <input type="submit" value="Login"/>
       </form>
 
