Created 2 more pages and made some changes to my initial website to suite my desired project plan

--- a/loginPage.html
+++ b/loginPage.html
@@ -6,7 +6,7 @@
     </head>
     <body> 
        <h2>Login</h2>
-       <form action="./index.html">
+       <form action="./menu.html">
         <label for="femail">Email:</label><br >
         <input type="email" value="" id="femail" name="femail" required /><br><br/>
         <label for="fpassword">Password:</label><br>
