--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
        <meta charset="utf-8" />
        <title> My first webpage</title>
        <link rel="stylesheet" href="mystylesheet.css" />
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+       <meta name="description" content="different Cameroonian and Nigerian dishes">
+       <meta name="keywords" content="African food,Cameroonian dishes, Nigerian food, best African Cuisine in London"/>
     </head>
     <body>
+      <div class="header">
+        <a href="#default" class="logo">Cynthia's Cuisine</a>
+        <div class="header-right">
+          <a class="active" href="./loginPage.html">Login</a>
+          <a href="./menu.html">Menu</a>
+          <a href="./contact.html">Contact</a>
+        </div>
+      </div>
       <h1> Hello! Welcome To Cynthia's Cuisine</h1>
       <p> Missing The Taste of Home? Or Would Simply Like To Try new dishes?, Order from us for an Amazing Experience.  
         We pride ourselve as the best in making Healthy and Delicious Cameroonian or Nigerian dishes.</p>
