Removed footer  from home page and added it to login and registration pages

--- a/register.html
+++ b/register.html
@@ -44,5 +44,14 @@
            <input type="submit" value="Login"/>
           </form><br></br>
         </div>
+        <footer>
+          <div class="footer-content">
+           <h4>Cameroonian And Nigerian Cuisine</h4>
+           <p>email: cynthiacuisine@gmail.com</p>
+           <p>phone:0234367778</p>
+             <a href="https://en.wikipedia.org/wiki/Cameroonian_cuisine"> About Cameroon Cuisine </a><br>
+             <a href="https://nomadparadise.com/nigerian-food/"> Most Popularly Tried nigerian-food</a>
+             </div>
+  </footer><br>
     </body>
     </html>
