--- a/loginPage.html
+++ b/loginPage.html
@@ -29,6 +29,14 @@
       <a href="mailto: cynthiataboko@gmail.com"> Email Address </a><br><br />
       <a href="tel:07508043758"> Phone Number </a><br><br />
       </div>
-       
+      <footer>
+        <div class="footer-content">
+         <h4>Cameroonian And Nigerian Cuisine</h4>
+         <p>email: cynthiacuisine@gmail.com</p>
+         <p>phone:0234367778</p>
+           <a href="https://en.wikipedia.org/wiki/Cameroonian_cuisine"> About Cameroon Cuisine </a><br>
+           <a href="https://nomadparadise.com/nigerian-food/"> Most Popularly Tried nigerian-food</a>
+           </div>
+</footer><br>
     </body>
 </html>
